# GradeSentinel_bot

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  Dockerfile.test  GEMINI.md  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  requirements.txt  seed_db.py  Дневник Зулькайнаров Умарбек 6 Nova.xlsx
.claude/: settings.json
Docs/: API_INTEGRATIONS.md  ARCHITECTURE.md  CHANGELOG_2026-04.md  CONTEXT.md  DEVELOPMENT.md  MAINTENANCE.md  Project_overview.md  Terms_of_reference.md  audit-and-research-2026-06-29.md  cutover-runbook-2026-06-29.md  draft_broadcast_v2.md  migration-sqlite-to-postgres-estimate-2026-06-29.md  refactor-and-product-plan-2026-06-29.md  rfc-grade-source-integration.md  rfc-grades-source-of-truth.md  web-rewrite-rfc.md  web-rewrite-status.md
api/: .gitignore  pyproject.toml
api/api/: __init__.py  main.py
api/api/routes/: health.py
api/tests/: test_health.py
deploy/: Caddyfile  README.md  deploy-sudoers  gradesentinel-backup.service  gradesentinel-backup.timer  gradesentinel-bot.service  gradesentinel-db-backup.cron  gradesentinel-db-backup.sh  gradesentinel-heartbeat.service  gradesentinel-heartbeat.timer  gradesentinel-offsite-backup.cron  gradesentinel-offsite-backup.service  gradesentinel-offsite-backup.timer  gradesentinel-webapp.service  install.sh  offsite-backup.sh
frontend/: admin.html  dashboard.html  index.html  instructions.html
landing/: .gitignore  hugo.toml
migrations/: env.py
scripts/: backfill_grade_date.py  cutover.sh  migrate_sqlite_to_pg.py  pg_smoke.py  (+1 more)
(+183 files in other folders)
